--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,46 @@
-./node_modules
+# Node.js
+
+# Dependências
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Diretórios de build
+dist/
+build/
+
+# Ambiente
+.env
+.env.*.local
+
+# Sistema operacional
+.DS_Store
+Thumbs.db
+
+# Editor/IDE
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Cache do pacote
+.npm/
+.pnpm/
+.yarn-cache/
+.cache/
+
+# Arquivos de testes temporários
+coverage/
+.nyc_output/
+
+# Outros
+*.tgz
+*.swp
