--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,7 +27,7 @@
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    "rootDir": "./",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -111,7 +111,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "**/*.ts"                   /* Inclui todos os arquivos .ts no projeto. */
+    "src/**/*.ts"                   /* Inclui todos os arquivos .ts no projeto. */
   ],
   "exclude": [
     "node_modules"              /* Exclui a pasta node_modules da compilação. */
