--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,19 +4,6 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DATABASE_URL=postgres://eijipay:eijipass@db:5432/eijipay
+      - DATABASE_URL="prisma+postgres://accelerate.prisma-data.net/?api_key=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcGlfa2V5IjoiMDFKWjNTM0RCOFlKSjQ2M1lFMFRNTVhKVFIiLCJ0ZW5hbnRfaWQiOiJhMTg5ODM3OWNhMzBiYzExZjAwODYzMjQzZmQxNzZlZjY1MjhkN2M0N2YyNDRmYTdhYzRmYWMxNTRkMzhjYzc0IiwiaW50ZXJuYWxfc2VjcmV0IjoiNTM5YjM2MmUtN2JlYi00NjBiLWIxNTItOTk0YjU5ODFlMjE1In0.xJwEmIj0fnepadetDw-GpPJDxcxW3w7dknxxC9IuyUQ"
     volumes:
       - ./backend:/app
-  db:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: eijipaydb
-      POSTGRES_USER: eijipay
-      POSTGRES_PASSWORD: eijipass
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
