--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@prisma/client": "^6.11.0",
     "@prisma/extension-accelerate": "^2.0.1",
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.8",
     "dotenv": "^17.0.0",
