--- a/.github/worflows/main.yml
+++ b/.github/worflows/main.yml
@@ -11,12 +11,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Instalar Docker
-        run: |
-          curl -fsSL https://get.docker.com | sh
-          docker --version
+        uses: actions/checkout@v4    
 
       - name: Login Docker Hub
         uses: docker/login-action@v4
@@ -42,6 +37,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            set -e
             cd ~/eijipay
             git pull origin main
             docker-compose -f docker-compose.prod.yml pull
