--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,6 @@ jobs:
             set -e
             cd ~/eijipay
             git pull origin main
+            echo $DATABASE_URL
             docker compose -f ./backend/docker-compose.prod.yml pull
             docker compose -f ./backend/docker-compose.prod.yml up -d --remove-orphans
