--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:18-alpine
+FROM node:18
+
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
@@ -9,4 +11,5 @@ COPY . .
 RUN npm run build
 
 EXPOSE 3000
+
 CMD ["npm", "start"]
