--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -110,9 +110,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": [
-    "src/**/*.ts"                   /* Inclui todos os arquivos .ts no projeto. */
-  ],
+  "include": ["src"],
   "exclude": [
     "node_modules"              /* Exclui a pasta node_modules da compilação. */
   ]
