--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/bin/www.js",
-    "dev": "ts-node-dev --respawn --transpile-only ./bin/www.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/bin/www.ts"
   },
   "keywords": [],
   "author": "",
