--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/bin/www.js",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/bin/www.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/bin/www.ts",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
